@@ -1,3 +1,13 @@
+2002-10-24  Daniel Elstner  <daniel.elstner@gmx.net>
+
+	* macros/cxx.m4: New file, implementing custom autoconf macros
+	related to checking the C++ compiler/environment.
+	(REGEXXER_CXX_HAS_STD_LOCALE): New m4 macro.
+	(REGEXXER_ARG_ENABLE_WARNINGS): New m4 macro.
+
+	* configure.ac: Make use of the new autoconf macros.
+	* Makefile.am (EXTRA_DIST): Add macros/cxx.m4.
+
 2002-10-21  Daniel Elstner  <daniel.elstner@gmx.net>
 
 	* configure.ac: Require gtkmm-2.0 >= 2.0.0.
